tests/rosetta/transpiler/C/9-billion-names-of-god-the-integer.error
compile failed: exit status 1: /tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c: In function ‘cumu’:
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:133:8: error: expected identifier or ‘(’ before ‘[’ token
  133 |     int[] **cache = NULL;
      |        ^
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:141:24: error: ‘cache’ undeclared (first use in this function)
  141 |             int *val = cache[y - x][minInt(x, y - x)];
      |                        ^~~~~
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:141:24: note: each undeclared identifier is reported only once for each function it appears in
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:142:78: error: ‘SIZE’ undeclared (first use in this function)
  142 |             row = list_append_intptr(row, &row_len, bigAdd(row[row_len - 1], SIZE, val, val_len));
      |                                                                              ^~~~
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:142:89: error: ‘val_len’ undeclared (first use in this function)
  142 |             row = list_append_intptr(row, &row_len, bigAdd(row[row_len - 1], SIZE, val, val_len));
      |                                                                                         ^~~~~~~
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:145:55: warning: passing argument 3 of ‘list_append_intptr’ from incompatible pointer type [-Wincompatible-pointer-types]
  145 |         cache = list_append_intptr(cache, &cache_len, row);
      |                                                       ^~~
      |                                                       |
      |                                                       int **
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:36:62: note: expected ‘int *’ but argument is of type ‘int **’
   36 | static int** list_append_intptr(int **arr, size_t *len, int *val) {
      |                                                         ~~~~~^~~
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c: In function ‘row’:
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:158:38: error: ‘SIZE’ undeclared (first use in this function)
  158 |         int *diff = bigSub(e[i + 1], SIZE, e[i], SIZE);
      |                                      ^~~~
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:159:64: error: ‘diff_len’ undeclared (first use in this function)
  159 |         out = list_append_str(out, &out_len, bigToString(diff, diff_len));
      |                                                                ^~~~~~~~
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c: In function ‘main’:
/tmp/ctranspile3581749236/9-billion-names-of-god-the-integer.mochi.c:187:86: error: ‘SIZE’ undeclared (first use in this function)
  187 |             puts(str_concat(str_concat(str_int(num), " "), bigToString(r[r_len - 1], SIZE)));
      |                                                                                      ^~~~

